--- a/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">chorder-tauri</string>
-    <string name="main_activity_title">chorder-tauri</string>
+    <string name="app_name">chorder</string>
+    <string name="main_activity_title">chorder</string>
 </resources>
